<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.example</groupId>
    <artifactId>SubiQueTeLlevo</artifactId>
    <version>1.0-SNAPSHOT</version>

	<properties>
        <maven.compiler.source>11</maven.compiler.source>
        <maven.compiler.target>11</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
    </properties>

    <dependencies>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.13.2</version>
            <scope>test</scope>
        </dependency>
		<dependency>
          <groupId>org.mockito</groupId>
          <artifactId>mockito-core</artifactId>
          <version>5.12.0</version> <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>SubiQueTeLlevo</groupId>
            <artifactId>SubiQueTeLlevo</artifactId>
            <version>1.0</version>
            <scope>system</scope>
			<systemPath>${project.basedir}/lib/SubiQueTeLlevo_v2.jar</systemPath> 
        </dependency>
    </dependencies>

	<build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.2.5</version>
                <configuration>
                    <argLine>
                        --add-opens=java.base/java.lang=org.mockito
                        --add-opens=java.desktop/java.awt=org.mockito
                        --add-opens=java.desktop/javax.swing=org.mockito
                        --add-opens=java.desktop/javax.accessibility=org.mockito
                        --add-opens=java.desktop/java.awt.event=org.mockito
                    </argLine>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-site-plugin</artifactId>
                <version>3.12.1</version>
            </plugin>
        </plugins>
    </build>

    <reporting>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-report-plugin</artifactId>
                <version>3.2.5</version>
            </plugin>
        </plugins>
    </reporting>

</project>